initialize GravitinoAuthorizer by reflection